[package]
name = "large_deviation_merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "^1.0.78"
sampling = { git = "https://github.com/Pardoxa/sampling.git", rev = "08c6e6d335d6d954314458c3f3325dd018f3f214" }
#sampling = {path="../sampling"}
structopt = "^0.3.26"
glob = "0.3.0"